[gd_scene load_steps=7 format=2]

[ext_resource path="res://tileset/tilemap_grassy_lands_decor.tres" type="TileSet" id=1]
[ext_resource path="res://tileset/tilemap_grassy_lands.tres" type="TileSet" id=2]
[ext_resource path="res://objects/obj_dungeon_door/obj_dungeon_door.tscn" type="PackedScene" id=3]
[ext_resource path="res://maps/chapter3/scripts/chapter3-nycto_dungeon.gd" type="Script" id=4]
[ext_resource path="res://entities/entity_mc/entity_mc.tscn" type="PackedScene" id=5]
[ext_resource path="res://tileset/scripts/set_camera_limit.gd" type="Script" id=6]

[node name="chapter3-nycto_dungeon" type="Node2D"]
script = ExtResource( 4 )

[node name="tilemap_grassy_lands" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
collision_layer = 8
collision_mask = 0
format = 1
tile_data = PoolIntArray( 0, 0, 65537, 1, 2, 131073, 2, 2, 131073, 3, 2, 131073, 4, 2, 131073, 5, 2, 131073, 6, 2, 131073, 7, 2, 131073, 8, 2, 131073, 9, 2, 131073, 10, 2, 131073, 11, 2, 131073, 12, 2, 131073, 13, 2, 131073, 14, 2, 131073, 15, 2, 131073, 16, 2, 131073, 17, 2, 131073, 18, 2, 131073, 19, 0, 65537, 65536, 2, 65538, 65537, 0, 0, 65538, 0, 1, 65539, 0, 1, 65540, 0, 1, 65541, 0, 1, 65542, 0, 1, 65543, 0, 1, 65544, 0, 1, 65545, 0, 1, 65546, 0, 1, 65547, 0, 1, 65548, 0, 1, 65549, 0, 1, 65550, 0, 1, 65551, 0, 1, 65552, 0, 1, 65553, 0, 1, 65554, 0, 2, 65555, 2, 65536, 131072, 2, 65538, 131073, 0, 65536, 131074, 13, 0, 131077, 0, 65537, 131078, 0, 65537, 131079, 0, 65537, 131080, 0, 65537, 131081, 0, 65537, 131082, 0, 65537, 131083, 0, 65537, 131084, 0, 65537, 131085, 0, 65537, 131086, 0, 65537, 131087, 0, 65537, 131088, 0, 65537, 131089, 0, 65537, 131090, 0, 65538, 131091, 2, 65536, 196608, 2, 65538, 196609, 0, 65536, 196610, 0, 65537, 196611, 0, 65537, 196612, 0, 65537, 196613, 0, 65537, 196614, 0, 65537, 196615, 13, 0, 196618, 0, 65537, 196619, 0, 65537, 196620, 0, 65537, 196621, 13, 0, 196624, 0, 65537, 196625, 0, 65537, 196626, 0, 65538, 196627, 2, 65536, 262144, 2, 65538, 262145, 0, 65536, 262146, 0, 65537, 262147, 0, 65537, 262148, 0, 65537, 262149, 0, 65537, 262150, 0, 65537, 262151, 0, 65537, 262152, 0, 65537, 262153, 0, 65537, 262154, 0, 65537, 262155, 0, 65537, 262156, 0, 65537, 262157, 0, 65537, 262158, 0, 65537, 262159, 0, 65537, 262160, 0, 65537, 262161, 0, 65537, 262162, 0, 65538, 262163, 2, 65536, 327680, 2, 65538, 327681, 0, 65536, 327682, 0, 65537, 327683, 0, 65537, 327684, 0, 65537, 327685, 13, 0, 327688, 0, 65537, 327689, 0, 65537, 327690, 0, 65537, 327691, 0, 65537, 327692, 0, 65537, 327693, 0, 65537, 327694, 0, 65537, 327695, 0, 65537, 327696, 0, 65537, 327697, 0, 65537, 327698, 0, 65538, 327699, 2, 65536, 393216, 2, 65538, 393217, 0, 65536, 393218, 0, 65537, 393219, 0, 65537, 393220, 0, 65537, 393221, 0, 65537, 393222, 0, 65537, 393223, 0, 65537, 393224, 0, 65537, 393225, 0, 65537, 393226, 0, 65537, 393227, 0, 65537, 393228, 0, 65537, 393229, 0, 65537, 393230, 0, 65537, 393231, 0, 65537, 393232, 0, 65537, 393233, 0, 65537, 393234, 0, 65538, 393235, 2, 65536, 458752, 2, 65538, 458753, 0, 65536, 458754, 0, 65537, 458755, 0, 65537, 458756, 0, 65537, 458757, 0, 65537, 458758, 0, 65537, 458759, 0, 65537, 458760, 0, 65537, 458761, 0, 65537, 458762, 13, 0, 458765, 0, 65537, 458766, 0, 65537, 458767, 0, 65537, 458768, 0, 65537, 458769, 0, 65537, 458770, 0, 65538, 458771, 2, 65536, 524288, 2, 65538, 524289, 0, 65536, 524290, 0, 65537, 524291, 0, 65537, 524292, 0, 65537, 524293, 0, 65537, 524294, 0, 65537, 524295, 0, 65537, 524296, 0, 65537, 524297, 0, 65537, 524298, 0, 65537, 524299, 0, 65537, 524300, 0, 65537, 524301, 0, 65537, 524302, 0, 65537, 524303, 0, 65537, 524304, 0, 65537, 524305, 0, 65537, 524306, 0, 65538, 524307, 2, 65536, 589824, 2, 65538, 589825, 0, 65536, 589826, 0, 65537, 589827, 0, 65537, 589828, 0, 65537, 589829, 0, 65537, 589830, 0, 65537, 589831, 0, 65537, 589832, 0, 65537, 589833, 0, 65537, 589834, 0, 65537, 589835, 0, 65537, 589836, 0, 65537, 589837, 0, 65537, 589838, 0, 65537, 589839, 0, 65537, 589840, 0, 65537, 589841, 0, 65537, 589842, 0, 65538, 589843, 2, 65536, 655360, 2, 65538, 655361, 0, 65536, 655362, 13, 0, 655365, 0, 65537, 655366, 0, 65537, 655367, 0, 65537, 655368, 0, 65537, 655369, 0, 65537, 655370, 0, 65537, 655371, 0, 65537, 655372, 0, 65537, 655373, 0, 65537, 655374, 13, 0, 655377, 0, 65537, 655378, 0, 65538, 655379, 2, 65536, 720896, 2, 65538, 720897, 0, 65536, 720898, 0, 65537, 720899, 0, 65537, 720900, 0, 65537, 720901, 0, 65537, 720902, 0, 65537, 720903, 0, 65537, 720904, 0, 65537, 720905, 0, 65537, 720906, 0, 65537, 720907, 0, 65537, 720908, 0, 65537, 720909, 0, 65537, 720910, 0, 65537, 720911, 0, 65537, 720912, 0, 65537, 720913, 0, 65537, 720914, 0, 65538, 720915, 2, 65536, 786432, 2, 65538, 786433, 0, 65536, 786434, 0, 65537, 786435, 0, 65537, 786436, 0, 65537, 786437, 0, 65537, 786438, 0, 65537, 786439, 0, 65537, 786440, 0, 65537, 786441, 0, 65537, 786442, 0, 65537, 786443, 0, 65537, 786444, 0, 65537, 786445, 0, 65537, 786446, 0, 65537, 786447, 0, 65537, 786448, 0, 65537, 786449, 0, 65537, 786450, 0, 65538, 786451, 2, 65536, 851968, 2, 65538, 851969, 0, 65536, 851970, 0, 65537, 851971, 0, 65537, 851972, 13, 0, 851975, 0, 65537, 851976, 0, 65537, 851977, 0, 65537, 851978, 0, 65537, 851979, 0, 65537, 851980, 0, 65537, 851981, 0, 65537, 851982, 0, 65537, 851983, 0, 65537, 851984, 0, 65537, 851985, 0, 65537, 851986, 0, 65538, 851987, 2, 65536, 917504, 2, 65538, 917505, 0, 65536, 917506, 0, 65537, 917507, 0, 65537, 917508, 0, 65537, 917509, 0, 65537, 917510, 0, 65537, 917511, 0, 65537, 917512, 0, 65537, 917513, 0, 65537, 917514, 0, 65537, 917515, 0, 65537, 917516, 0, 65537, 917517, 0, 65537, 917518, 0, 65537, 917519, 13, 0, 917522, 0, 65538, 917523, 2, 65536, 983040, 2, 65538, 983041, 0, 131072, 983042, 0, 131073, 983043, 0, 131073, 983044, 0, 131073, 983045, 0, 131073, 983046, 0, 131073, 983047, 0, 131073, 983048, 0, 131073, 983049, 0, 65537, 983050, 0, 65537, 983051, 0, 131073, 983052, 0, 131073, 983053, 0, 131073, 983054, 0, 131073, 983055, 0, 131073, 983056, 0, 131073, 983057, 0, 131073, 983058, 0, 131074, 983059, 2, 65536, 1048576, 2, 65538, 1048577, 2, 0, 1048578, 2, 1, 1048579, 2, 1, 1048580, 2, 1, 1048581, 2, 1, 1048582, 2, 1, 1048583, 2, 1, 1048584, 2, 2, 1048585, 0, 65536, 1048586, 0, 65538, 1048587, 2, 0, 1048588, 2, 1, 1048589, 2, 1, 1048590, 2, 1, 1048591, 2, 1, 1048592, 2, 1, 1048593, 2, 1, 1048594, 2, 2, 1048595, 2, 65536, 1114112, 2, 65538, 1114113, 2, 131072, 1114114, 2, 131073, 1114115, 2, 131073, 1114116, 2, 131073, 1114117, 2, 131073, 1114118, 2, 131073, 1114119, 2, 131073, 1114120, 2, 131074, 1114121, 0, 65536, 1114122, 0, 65538, 1114123, 2, 131072, 1114124, 2, 131073, 1114125, 2, 131073, 1114126, 2, 131073, 1114127, 2, 131073, 1114128, 2, 131073, 1114129, 2, 131073, 1114130, 2, 131074, 1114131, 2, 65536, 1179648, 2, 65538, 1179649, 16, 0, 1179650, 16, 0, 1179651, 16, 0, 1179652, 16, 0, 1179653, 16, 0, 1179654, 16, 0, 1179655, 16, 0, 1179656, 16, 0, 1179657, 0, 65536, 1179658, 0, 65538, 1179659, 16, 0, 1179660, 16, 0, 1179661, 16, 0, 1179662, 16, 0, 1179663, 16, 0, 1179664, 16, 0, 1179665, 16, 0, 1179666, 16, 0, 1179667, 2, 65536, 1245184, 2, 65538, 1245193, 0, 65536, 1245194, 0, 65538, 1245203, 2, 65536, 1310720, 2, 65538, 1310721, 0, 0, 1310722, 0, 1, 1310723, 0, 1, 1310724, 0, 1, 1310725, 0, 1, 1310726, 0, 1, 1310727, 0, 1, 1310728, 0, 1, 1310729, 0, 65537, 1310730, 0, 65537, 1310731, 0, 1, 1310732, 0, 1, 1310733, 0, 1, 1310734, 0, 1, 1310735, 0, 1, 1310736, 0, 1, 1310737, 0, 1, 1310738, 0, 2, 1310739, 2, 65536, 1376256, 2, 65538, 1376257, 0, 65536, 1376258, 0, 65537, 1376259, 0, 65537, 1376260, 0, 65537, 1376261, 0, 65537, 1376262, 0, 65537, 1376263, 0, 65537, 1376264, 0, 65537, 1376265, 0, 65537, 1376266, 0, 65537, 1376267, 0, 65537, 1376268, 0, 65537, 1376269, 0, 65537, 1376270, 0, 65537, 1376271, 13, 0, 1376274, 0, 65538, 1376275, 2, 65536, 1441792, 2, 65538, 1441793, 0, 65536, 1441794, 0, 65537, 1441795, 13, 0, 1441798, 0, 65537, 1441799, 0, 65537, 1441800, 0, 65537, 1441801, 0, 65537, 1441802, 0, 65537, 1441803, 0, 65537, 1441804, 0, 65537, 1441805, 13, 0, 1441808, 0, 65537, 1441809, 0, 65537, 1441810, 0, 65538, 1441811, 2, 65536, 1507328, 2, 65538, 1507329, 0, 65536, 1507330, 13, 0, 1507333, 0, 65537, 1507334, 0, 65537, 1507335, 0, 65537, 1507336, 0, 65537, 1507337, 0, 65537, 1507338, 0, 65537, 1507339, 0, 65537, 1507340, 0, 65537, 1507341, 0, 65537, 1507342, 0, 65537, 1507343, 0, 65537, 1507344, 0, 65537, 1507345, 0, 65537, 1507346, 0, 65538, 1507347, 2, 65536, 1572864, 2, 65538, 1572865, 0, 65536, 1572866, 0, 65537, 1572867, 0, 65537, 1572868, 0, 65537, 1572869, 0, 65537, 1572870, 13, 0, 1572873, 0, 65537, 1572874, 0, 65537, 1572875, 13, 0, 1572878, 0, 65537, 1572879, 0, 65537, 1572880, 0, 65537, 1572881, 0, 65537, 1572882, 0, 65538, 1572883, 2, 65536, 1638400, 2, 65538, 1638401, 0, 65536, 1638402, 0, 65537, 1638403, 0, 65537, 1638404, 0, 65537, 1638405, 0, 65537, 1638406, 0, 65537, 1638407, 0, 65537, 1638408, 0, 65537, 1638409, 0, 65537, 1638410, 0, 65537, 1638411, 0, 65537, 1638412, 0, 65537, 1638413, 0, 65537, 1638414, 0, 65537, 1638415, 13, 0, 1638418, 0, 65538, 1638419, 2, 65536, 1703936, 2, 65538, 1703937, 0, 65536, 1703938, 0, 65537, 1703939, 0, 65537, 1703940, 0, 65537, 1703941, 0, 65537, 1703942, 0, 65537, 1703943, 0, 65537, 1703944, 0, 65537, 1703945, 0, 65537, 1703946, 0, 65537, 1703947, 0, 65537, 1703948, 0, 65537, 1703949, 0, 65537, 1703950, 0, 65537, 1703951, 0, 65537, 1703952, 0, 65537, 1703953, 0, 65537, 1703954, 0, 65538, 1703955, 2, 65536, 1769472, 2, 65538, 1769473, 0, 65536, 1769474, 0, 65537, 1769475, 0, 65537, 1769476, 13, 0, 1769479, 0, 65537, 1769480, 0, 65537, 1769481, 0, 65537, 1769482, 0, 65537, 1769483, 0, 65537, 1769484, 0, 65537, 1769485, 0, 65537, 1769486, 0, 65537, 1769487, 0, 65537, 1769488, 0, 65537, 1769489, 0, 65537, 1769490, 0, 65538, 1769491, 2, 65536, 1835008, 2, 65538, 1835009, 0, 65536, 1835010, 0, 65537, 1835011, 0, 65537, 1835012, 0, 65537, 1835013, 0, 65537, 1835014, 0, 65537, 1835015, 0, 65537, 1835016, 0, 65537, 1835017, 0, 65537, 1835018, 0, 65537, 1835019, 0, 65537, 1835020, 0, 65537, 1835021, 0, 65537, 1835022, 0, 65537, 1835023, 0, 65537, 1835024, 0, 65537, 1835025, 0, 65537, 1835026, 0, 65538, 1835027, 2, 65536, 1900544, 2, 65538, 1900545, 0, 65536, 1900546, 0, 65537, 1900547, 0, 65537, 1900548, 0, 65537, 1900549, 0, 65537, 1900550, 0, 65537, 1900551, 0, 65537, 1900552, 0, 65537, 1900553, 0, 65537, 1900554, 0, 65537, 1900555, 0, 65537, 1900556, 0, 65537, 1900557, 0, 65537, 1900558, 13, 0, 1900561, 0, 65537, 1900562, 0, 65538, 1900563, 2, 65536, 1966080, 2, 65538, 1966081, 0, 65536, 1966082, 13, 0, 1966085, 0, 65537, 1966086, 0, 65537, 1966087, 0, 65537, 1966088, 0, 65537, 1966089, 0, 65537, 1966090, 0, 65537, 1966091, 0, 65537, 1966092, 0, 65537, 1966093, 0, 65537, 1966094, 0, 65537, 1966095, 0, 65537, 1966096, 0, 65537, 1966097, 0, 65537, 1966098, 0, 65538, 1966099, 2, 65536, 2031616, 2, 65538, 2031617, 0, 65536, 2031618, 0, 65537, 2031619, 0, 65537, 2031620, 0, 65537, 2031621, 0, 65537, 2031622, 0, 65537, 2031623, 0, 65537, 2031624, 0, 65537, 2031625, 0, 65537, 2031626, 0, 65537, 2031627, 0, 65537, 2031628, 13, 0, 2031631, 0, 65537, 2031632, 0, 65537, 2031633, 0, 65537, 2031634, 0, 65538, 2031635, 2, 65536, 2097152, 2, 65538, 2097153, 0, 65536, 2097154, 0, 65537, 2097155, 0, 65537, 2097156, 13, 0, 2097159, 0, 65537, 2097160, 0, 65537, 2097161, 0, 65537, 2097162, 0, 65537, 2097163, 0, 65537, 2097164, 0, 65537, 2097165, 0, 65537, 2097166, 0, 65537, 2097167, 0, 65537, 2097168, 0, 65537, 2097169, 0, 65537, 2097170, 0, 65538, 2097171, 2, 65536, 2162688, 2, 65538, 2162689, 0, 65536, 2162690, 0, 65537, 2162691, 0, 65537, 2162692, 0, 65537, 2162693, 0, 65537, 2162694, 0, 65537, 2162695, 0, 65537, 2162696, 0, 65537, 2162697, 0, 65537, 2162698, 0, 65537, 2162699, 0, 65537, 2162700, 0, 65537, 2162701, 0, 65537, 2162702, 0, 65537, 2162703, 13, 0, 2162706, 0, 65538, 2162707, 2, 65536, 2228224, 2, 65538, 2228225, 0, 131072, 2228226, 0, 131073, 2228227, 0, 131073, 2228228, 0, 131073, 2228229, 0, 131073, 2228230, 0, 131073, 2228231, 0, 131073, 2228232, 0, 131073, 2228233, 0, 131073, 2228234, 0, 131073, 2228235, 0, 131073, 2228236, 0, 131073, 2228237, 0, 131073, 2228238, 0, 131073, 2228239, 0, 131073, 2228240, 0, 131073, 2228241, 0, 131073, 2228242, 0, 131074, 2228243, 2, 65536, 2293760, 0, 65537, 2293761, 2, 1, 2293762, 2, 1, 2293763, 2, 1, 2293764, 2, 1, 2293765, 2, 1, 2293766, 2, 1, 2293767, 2, 1, 2293768, 2, 1, 2293769, 2, 1, 2293770, 2, 1, 2293771, 2, 1, 2293772, 2, 1, 2293773, 2, 1, 2293774, 2, 1, 2293775, 2, 1, 2293776, 2, 1, 2293777, 2, 1, 2293778, 2, 1, 2293779, 0, 65537 )
script = ExtResource( 6 )

[node name="tilemap_grassy_lands_decor" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
cell_y_sort = true
collision_layer = 8
collision_mask = 0
format = 1
tile_data = PoolIntArray( 131074, 0, 0, 196615, 0, 0, 196621, 0, 0, 327685, 0, 0, 458762, 0, 0, 655362, 0, 0, 655374, 0, 0, 851972, 0, 0, 917519, 0, 0, 1376271, 0, 0, 1441795, 0, 0, 1441805, 0, 0, 1507330, 0, 0, 1572870, 0, 0, 1572875, 0, 0, 1638415, 0, 0, 1769476, 0, 0, 1900558, 0, 0, 1966082, 0, 0, 2031628, 0, 0, 2097156, 0, 0, 2162703, 0, 0 )

[node name="obj_dungeon_door" parent="tilemap_grassy_lands_decor" instance=ExtResource( 3 )]
position = Vector2( 160, 288 )

[node name="node_minions" type="Node2D" parent="tilemap_grassy_lands_decor"]

[node name="entity_mc" parent="tilemap_grassy_lands_decor" instance=ExtResource( 5 )]
position = Vector2( 160, 528 )

[node name="node_stage_one_spawn" type="Node2D" parent="."]

[node name="0" type="Position2D" parent="node_stage_one_spawn"]
position = Vector2( 56, 400 )

[node name="5" type="Position2D" parent="node_stage_one_spawn"]
position = Vector2( 112, 344 )

[node name="1" type="Position2D" parent="node_stage_one_spawn"]
position = Vector2( 40, 520 )

[node name="2" type="Position2D" parent="node_stage_one_spawn"]
position = Vector2( 280, 480 )

[node name="3" type="Position2D" parent="node_stage_one_spawn"]
position = Vector2( 232, 408 )

[node name="4" type="Position2D" parent="node_stage_one_spawn"]
position = Vector2( 280, 360 )

[node name="node_stage_two_spawn" type="Node2D" parent="."]

[node name="0" type="Position2D" parent="node_stage_two_spawn"]
position = Vector2( 56, 224 )

[node name="1" type="Position2D" parent="node_stage_two_spawn"]
position = Vector2( 56, 104 )

[node name="2" type="Position2D" parent="node_stage_two_spawn"]
position = Vector2( 248, 80 )

[node name="3" type="Position2D" parent="node_stage_two_spawn"]
position = Vector2( 288, 176 )

[node name="4" type="Position2D" parent="node_stage_two_spawn"]
position = Vector2( 168, 168 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.188235, 0.188235, 0.270588, 1 )
__meta__ = {
"_edit_lock_": true
}
